move integration test to jportal_webapp, remove jportal_web_tests